src/main/java/Experiments/ExperimentBatch.g4
grammar ExperimentBatch;
start:	path output (experiment)* EOF ;

path: 'Path' ID ';';
output: 'Output' ID ';';
experiment: ID* ';';

NEWLINE : [ \t\r\n]+ -> skip;
ID   : [a-zA-Z0-9"'*!?/._-]+;
SINGLELINECOMMENT : '#' .*? '\n' -> skip ;
MULTILINECOMMENT : '/#' .*? '#/' -> skip ;
